# pi_agent_rust

./: .gitignore  .ubsignore  AGENTS.md  BENCHMARKS.md  CONFORMANCE.md  Cargo.toml  EXISTING_PI_STRUCTURE.md  EXTENSIONS.md  FEATURE_PARITY.md  PLAN_TO_COMPLETE_PORT.md  README.md  build.rs
.beads/: issues.jsonl
benches/: tools.rs
docs/: EXTENSION_CANDIDATES.md  EXTENSION_REFRESH_CHECKLIST.md  TEST_COVERAGE_MATRIX.md  development.md  extension-artifact-provenance.json  extension-candidate-pool.json  extension-entry-scan.json  extension-master-catalog.json  extension-priority-summary.json  extension-priority.json  extension-research-playbook.json  extension-troubleshooting.md  releasing.md  session.md  traceability_matrix.json
scripts/: ext_quality_pipeline.sh
src/: agent.rs  agent_cx.rs  app.rs  auth.rs  autocomplete.rs  cli.rs  compaction.rs  config.rs  conformance_shapes.rs  error.rs  error_hints.rs  extension_dispatcher.rs  extension_events.rs  extension_inclusion.rs  extension_popularity.rs  extension_preflight.rs  extension_tools.rs  extensions.rs  extensions_js.rs  http_shim.rs  interactive.rs  keybindings.rs  lib.rs  main.rs  model.rs  models.rs  package_manager.rs  permissions.rs  provider.rs  resources.rs  rpc.rs  scheduler.rs  session.rs  session_index.rs  session_picker.rs  sse.rs  terminal_images.rs  theme.rs  tools.rs  tui.rs  (+1 more)
tests/: auth_oauth_refresh_vcr.rs  bench_schema.rs  capability_policy_model.rs  capability_policy_scoped.rs  capability_prompt.rs  conformance_comparator.rs  conformance_mock.rs  conformance_report.rs  e2e_cli.rs  e2e_golden_path.rs  e2e_live.rs  e2e_message_session_control.rs  e2e_provider_streaming.rs  e2e_rpc.rs  e2e_session_persistence.rs  e2e_tools.rs  e2e_tui.rs  error_handling.rs  event_dispatch_latency.rs  ext_conformance_diff.rs  ext_conformance_generated.rs  ext_conformance_guard.rs  ext_conformance_scenarios.rs  ext_conformance_shapes.rs  ext_inclusion_list.rs  ext_load_time_benchmark.rs  ext_proptest.rs  extensions_process_shim.rs  extensions_provider_oauth.rs  extensions_stress.rs  http_client.rs  main_cli_selection.rs  mock_spec_validation.rs  model_registry.rs  (+16 more)
(+400 files in other folders)
